# Artik

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  format.sh
cmake/: googletest-download.cmake  googletest.cmake
docs/: Artik.pptx  Hostapd.md  attack.md  convention.md  useful_commands.md
src/lib/: includes.hpp
src/lib/attack/: attack.cpp  attack.hpp  attack_manager.cpp  attack_manager.hpp
src/lib/calibration/: calibration.cpp  calibration.hpp  gap_score_provider.cpp  gap_score_provider.hpp  gaussian_mixture_analysis.hpp  score_provider.hpp  simple_score_provider.cpp  simple_score_provider.hpp
src/lib/low_level/: cache.cpp  cache.hpp  cache_intrinsics.cpp  cache_intrinsics.h  cache_intrinsics.hpp  cpuid.cpp  cpuid.hpp
src/lib/sampling/: calibration.cpp  calibration.hpp  measurement.cpp  measurement.hpp  sampler.cpp  sampler.hpp  sampler_primitive.cpp  sampler_primitive.hpp  sampler_primitives.cpp  sampler_primitives.hpp  samplers.cpp  samplers.h  samplers.hpp  score_provider.hpp
src/lib/sampling/samplers/: average_sampler.cpp  average_sampler.hpp  list_sampler.cpp  list_sampler.hpp  simple_sampler.cpp  simple_sampler.hpp
src/lib/sys_info/: cache.cpp  cache.hpp  calibration.h  cpu_info.h  cpuid.cpp  cpuid.hpp
src/lib/timing_agents/: sleep_timing_agent.cpp  sleep_timing_agent.hpp  timing_agent.hpp
src/lib/utils/: Board.cpp  Board.hpp  attack_surface.cpp  attack_surface.hpp  base_memory.cpp  base_memory.hpp  bits.hpp  cacheutils.h  file_wrapper.cpp  file_wrapper.hpp  memory_wrapper.cpp  memory_wrapper.hpp
src/lib/utils/memory/: base_memory.cpp  base_memory.hpp
src/main/utils/: cacheutils.h  intel.h
src/playground/: CMakeLists.txt  L3_fr_array_scan_using_random.cpp  L3_fr_branch_detector.cpp  L3_fr_same_array_timing.cpp  L3_pp_diff_array_known_location.cpp  cache_info_usage.cpp  hostapd_attacker.cpp
src/tests/: CMakeLists.txt  example_test.cpp
src/tests/samplers/: test_average_sampler.cpp  test_list_sampler.cpp  test_simple_sampler.cpp
src/tests/system_tests/: layer_tester.py
src/tests/system_tests/layers/: layer.hpp  layer_0_cache_intrinsics.cpp  layer_0_cache_intrinsics.hpp  layer_1_memory_wrapper.cpp  layer_1_memory_wrapper.hpp  layer_2_sampler_primitive.cpp  layer_2_sampler_primitive.hpp  layer_3_list_sampler.cpp  layer_3_list_sampler.hpp  layer_3_simple_sampler.cpp  layer_3_simple_sampler.hpp  layer_4_average_sampler.cpp  layer_4_average_sampler.hpp  layer_5_attack_manager.cpp  layer_5_attack_manager.hpp  layer_5_attack_manager_without_average.cpp  layer_5_attack_manager_without_average.hpp  layer_tester.cpp
src/tests/testutils/: testutils_sample_primitives.inl
src/tests/unit_tests/samplers/: test_average_sampler.cpp  test_list_sampler.cpp  test_simple_sampler.cpp
src/tests/unit_tests/utils/: test_memory_wrapper.cpp
src/tests/utils/: test_memory_wrapper.cpp
src/victims/: branch_code.cpp  branch_code_with_loop.cpp  loop_fixed_array_writer.cpp  loop_random_array_writer.cpp
tasks/: week3.md
